package hu.bme.aut.android.cityofguilds.ui.util

object TestTags {
    val LOGIN_SCREEN = "LOGIN_SCREEN"
    val REGISTER_SCREEN = "REGISTER_SCREEN"
    val CAPTURE_SCREEN =  "CAPTURE_SCREEN"
    val LIST_SCREEN = "LIST_SCREEN"
    val MAIN_SCREEN = "MAIN_SCREEN"
    val MAP_SCREEN = "MAP_SCREEN"
    val HOME_SCREEN = "HOME_SCREEN"
}